
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#5005] Fix incorrect label on introtext field in weblink panel
- Remove session_cookie_lifetime variable when logging out of context
- Remove legacy SESSION variables and dependencies
- [#4703] Remove user settings when logging out of a Context
- [#2566] Improve tv output render url to take resource pagetitle when using resourcelist TV type
- [#5020] Improve per page field on grids to handle ENTER key
- [#5021] Improve modUser::joinGroup to check to see if user is already in group
- [#5025] Fix issue where duplicate resource window did not show duplicate children option
- [#5007] Only create Lexicon Entries for Settings if they are specified
- [#5006] Fix issue with updating a policy template with no permissions
- [#5001] Fix issue with modauth, wctx and RTE browser

MODX Revolution 2.1.1-pl (June 1, 2011)
====================================
- Make modauth calculation independent of session_id
- Ensure login/logout processors do not add Contexts with empty keys
- [#3145] Ensure mail_smtp_pass and proxy_password System Settings use password xtype
- [#4360] Show current context name on MODx.Browser window for reference
- [#4881] Fix issue where modx-combo-language was missing from system setting editing screen
- [#4896] Fix issue where New Category window is not cleared on each load
- [#4934] Fix missing lexicon load call in package download processor
- [#4927] Gray out disabled plugins in elements tree, italicize locked elements
- [#4921] Ensure Category names are not ever capitalized when displayed as tabs
- [#4865] Fix PDO error caused by missing charset for new MySQL installs on PHP 5.3.6+
- Improve modSessionHandler and add Settings for advanced configuration
- [#4750] Fix various issues with duplicating Resources, such as new name not prefixed and incorrect menuindex