@@ -9,7 +9,7 @@ $xpdo_meta_map['modEvent']= array (
   'table' => 'system_eventnames',
   'fields' => 
   array (
-    'name' => '',
+    'name' => NULL,
     'service' => 0,
     'groupname' => '',
   ),
@@ -21,8 +21,7 @@ $xpdo_meta_map['modEvent']= array (
       'precision' => '50',
       'phptype' => 'string',
       'null' => false,
-      'default' => '',
-      'index' => 'unique',
+      'index' => 'pk',
     ),
     'service' => 
     array (
@@ -44,10 +43,10 @@ $xpdo_meta_map['modEvent']= array (
   ),
   'indexes' => 
   array (
-    'name' => 
+    'PRIMARY' => 
     array (
-      'alias' => 'name',
-      'primary' => false,
+      'alias' => 'PRIMARY',
+      'primary' => true,
       'unique' => true,
       'type' => 'BTREE',
       'columns' => 
